--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -1,28 +1,28 @@
 <div class="table two-to-left">
   <div class="table-row">
     <a href class="table-cell link" ng-click="setDateToday()">
-      <span class="text-convert">today</span>
+      <span class="text-convert large">today</span>
     </a>
     <a href class="table-cell link" ng-click="setDateTomorrow()">
-      <span class="text-convert">tomorrow</span>
+      <span class="text-convert large">tomorrow</span>
     </a>
   </div>
 
   <div class="table-row">
     <a href class="table-cell link" ng-click="setDateDayAfterTomorrow()">
-      <span class="text-convert">2 days later</span>
+      <span class="text-convert large">2 days later</span>
     </a>
     <a href class="table-cell link" ng-click="setDateNextWeekend()">
-      <span class="text-convert">weekend</span>
+      <span class="text-convert large">weekend</span>
     </a>
   </div>
 
   <div class="table-row">
     <a href class="table-cell link" ng-click="setDateFirstDayOfNextWeek()">
-      <span class="text-convert">next week</span>
+      <span class="text-convert large">next week</span>
     </a>
     <a href class="table-cell link" ng-click="setDateFirstDayOfNextMonth()">
-      <span class="text-convert">next month</span>
+      <span class="text-convert large">next month</span>
     </a>
   </div>
 </div>
