Smaller and bold font into collapsible widget in note editor.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -72,7 +72,7 @@
             </div>
             <div ng-if="!note.trans.list || (!note.trans.keywords || !note.trans.keywords.length)" style="text-align: center;" class="row">
               <a href class="downplayed" ng-click="toggleCollapsible()">
-                <span ng-bind="collapsibleOpen ? 'less &and;' : 'more &or;'"></span>
+                <span style="font-size: 13px; font-weight: 700;" ng-bind="collapsibleOpen ? 'less &and;' : 'more &or;'"></span>
               </a>
             </div>
 
