--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -168,7 +168,7 @@
 
           <div ng-if="note.trans.uuid" class="group-mixed vertically-centered" style="color: #919191; font-size: 13px; line-height: 22px;">
             <div class="group-mixed--middle">
-              <span>{{::note.trans.created | date:'EEE d MMMM y'}}</span>
+              <span>{{::note.trans.created | date:'EEE d MMMM y' | lowercase}}</span>
             </div>
             <div class="group-mixed--right">
               <span>created</span>
@@ -177,7 +177,7 @@
 
           <div ng-if="note.trans.uuid && note.trans.created !== note.trans.modified" class="group-mixed vertically-centered" style="color: #919191; font-size: 13px; line-height: 22px;">
             <div class="group-mixed--middle">
-              <span>{{note.trans.modified | date:'EEE d MMMM y'}}</span>
+              <span>{{note.trans.modified | date:'EEE d MMMM y' | lowercase}}</span>
             </div>
             <div class="group-mixed--right">
               <span>modified</span>
