In note editor, toggle title visibility in titlebar when content scroll passes bottom of a title input.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -95,6 +95,7 @@
   <script src="static/app/base/listPromptDirective.js"></script>
   <script src="static/app/base/modalDirective.js"></script>
   <script src="static/app/base/toasterDirective.js"></script>
+  <script src="static/app/base/scrollThenToggleDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
